--- a/app/views/leads/index.html.slim
+++ b/app/views/leads/index.html.slim
@@ -1,3 +1,41 @@
-h1
-  = link_to :root do
-    = 'Daniel Weinmann'
+.row.text-center
+  h1.no-margin
+    = image_tag 'index.png'
+div style="background: #312827"
+  .row.text-center.padding-vertical
+    h2 style="color: #FF9500" Buenas, eu sou o Daniel Weinmann
+    p.lead.margin-bottom style="color: #FFFFFF" Pode ser que você me conheça de um destes
+    a.thumbnail.margin-horizontal-small target='_blank' href='http://ganas.com.br'
+      = image_tag 'ganas.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://www.catarse.me/'
+      = image_tag 'catarse.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://www.youtube.com/playlist?list=PLlhB0_vzhkyDsTo0muy-5pWufSe1RKQkK'
+      = image_tag 'aura.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://vimeo.com/28220980'
+      = image_tag 'engage.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://soundcloud.com/danielweinmann/sets/amendoa-rock-2006'
+      = image_tag 'amendoa.jpg'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://unlock.fund/'
+      = image_tag 'unlock.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://www.facebook.com/danielretrofm'
+      = image_tag 'retrofm.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://vimeo.com/84442007'
+      = image_tag 'casaliberdade.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://www.facebook.com/yescatsounds'
+      = image_tag 'catsounds.jpg'
+    a.thumbnail.margin-horizontal-small target='_blank' href='http://temacucar.com/'
+      = image_tag 'temacucar.png'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://www.facebook.com/tangocccev'
+      = image_tag 'cccev.jpg'
+    a.thumbnail.margin-horizontal-small target='_blank' href='http://www.centroruthcardoso.org.br/iniciativas/festival-de-ideias/'
+      = image_tag 'festivaldeideias.png'
+div style="background: #1D9799; color: #ffffff"
+  .content.row.text-justify.padding-vertical
+    h3.text-center.margin-bottom Há quem pense que eu sou bailarino e professor de tango, programador, músico, empreendedor, DJ de tango, consultor ou poeta
+    p.lead De muitas formas tá todo mundo certo. Eu já fiz tudo isso, criei vários negócios e outras coisas muito bonitas. Mas eu não sou nada disso. E não quero dizer no sentido mais amplo, que é de que isso não define o meu ser. Tem algo muito mais concreto faltando. Sinto que nenhuma destas coisas definem minha profissão, ou seja, o meu trabalho e minha contribuição para o mundo.
+    p.lead Não encontrei um nome de profissão, mas vivendo e refletindo profundamente cheguei a 4 características que definem o que faço:
+    ol.lead
+      li <strong>Eu sou um artista.</strong> Mesmo quando trabalho em áreas que não são normalmente consideradas artísticas, eu aporto arte. O jeito de fazer as coisas de um artista. A disciplina de trazer pra fora — e embelezar — o que vem de dentro.
+      li <strong>Eu sou um professor.</strong> Aprender e ensinar são provavelmente as coisas que mais me dão brilho aos olhos. E a superfície não me satisfaz: preciso ir a fundo no que estudo, e ensinar tudo sem guardar nada só pra mim.
+      li <strong>Eu sou um arquiteto do ecossistema.</strong> Eu tô sempre atento ao que se passa com o todo. Mesmo quando trabalho nas profundezas da arte mais individual, na hora de trazer essa arte pro mundo, faço isso com todo o ecossistema em mente.
+      li <strong>Eu tenho a coragem pra fazer o que tem que ser feito.</strong> Coragem — agir com o coração — me vem fácil. A partir do momento que sinto com clareza o que tem que ser feito, pronto: é só fazer :)
