Changes ganas link to fb page

--- a/app/views/leads/index.html.slim
+++ b/app/views/leads/index.html.slim
@@ -5,7 +5,7 @@ div style="background: #312827"
   .row.text-center.padding-vertical
     h2 style="color: #FF9500" Buenas, eu sou o Daniel Weinmann
     p.lead.margin-bottom style="color: #FFFFFF" Pode ser que você me conheça de um destes
-    a.thumbnail.margin-horizontal-small target='_blank' href='http://ganas.com.br'
+    a.thumbnail.margin-horizontal-small target='_blank' href='https://www.facebook.com/ganastangoclube'
       = image_tag 'ganas.png'
     a.thumbnail.margin-horizontal-small target='_blank' href='https://www.catarse.me/'
       = image_tag 'catarse.png'
