Layout updates for mobile

--- a/app/views/leads/index.html.slim
+++ b/app/views/leads/index.html.slim
@@ -2,7 +2,7 @@
   h1.no-margin
     = image_tag 'index.png'
 div style="background: #312827"
-  .row.text-center.padding-vertical
+  .content.row.text-center.padding-vertical
     h2 style="color: #FF9500" Buenas, eu sou o Daniel Weinmann
     p.lead.margin-bottom style="color: #FFFFFF" Pode ser que tu me conheça de um destes
     a.thumbnail.margin-horizontal-small target='_blank' href='https://www.facebook.com/ganastangoclube'
