--- a/app/assets/stylesheets/standards/colors.sass
+++ b/app/assets/stylesheets/standards/colors.sass
@@ -1,3 +1,7 @@
-$white: #ffffff
-$brown: #660C12
-$cream: #E8DDCB
+$white: #FFFFFF
+$dark: #312827
+$yellow: #F8CD3A
+$orange: #FF9500
+$green: #1D9799
+$pink: #E51C59
+$red: #AC0246
