--- a/app/views/leads/index.html.slim
+++ b/app/views/leads/index.html.slim
@@ -38,22 +38,22 @@ div.bg-green.white
     p.lead Não tenho um título, mas vivendo e refletindo cheguei a 4 traços que falam bem do que faço:
     ol.no-bullet
       li
-        h4.bold.padding-vertical-small
+        h4.bold.padding-vertical-small.text-left
           .number 1
           | Eu sou um artista
         p.lead Mesmo quando trabalho em áreas que não são normalmente consideradas artísticas, eu aporto arte. O jeito de fazer as coisas de um artista. A disciplina de trazer pra fora — e embelezar — o que vem de dentro.
       li
-        h4.bold.padding-vertical-small
+        h4.bold.padding-vertical-small.text-left
           span.number 2
           | Eu sou um professor
         p.lead Aprender e ensinar são provavelmente as coisas que mais me dão brilho aos olhos. E a superfície não me satisfaz: preciso ir a fundo no que estudo, e ensinar tudo sem guardar nada só pra mim.
       li
-        h4.bold.padding-vertical-small
+        h4.bold.padding-vertical-small.text-left
           span.number 3
           | Eu sou um arquiteto do ecossistema
         p.lead Eu tô sempre atento ao que se passa com o todo. Mesmo quando trabalho nas profundezas da arte mais individual, na hora de trazer essa arte pro mundo, faço isso com todo o ecossistema em mente.
       li
-        h4.bold.padding-vertical-small
+        h4.bold.padding-vertical-small.text-left
           span.number 4
           | Eu tenho a coragem pra fazer o que tem que ser feito
         p.lead Coragem — agir com o coração — me vem fácil. A partir do momento que sinto com clareza o que tem que ser feito, pronto: é só fazer :)
