Adds new block of text

--- a/app/assets/stylesheets/standards/classes.sass
+++ b/app/assets/stylesheets/standards/classes.sass
@@ -2,6 +2,10 @@
   width: 92%
   @include breakpoint(medium up)
     width: 800px
+.gentium
+  font-family: 'Gentium Book Basic', serif
+  font-weight: 400
+  font-style: italic
 .lead
   @include breakpoint(small only)
     font-size: $global-font-size * 1.10
@@ -14,6 +18,10 @@
   background: $dark
 .bg-green
   background: $green
+.bg-dark-orange
+  background: $dark-orange
+.dark
+  color: $white
 .white
   color: $white
 .orange
