--- a/app/views/leads/index.html.slim
+++ b/app/views/leads/index.html.slim
@@ -57,3 +57,7 @@ div.bg-green.white
           span.number 4
           | Eu tenho a coragem pra fazer o que tem que ser feito
         p.lead Coragem — agir com o coração — me vem fácil. A partir do momento que sinto com clareza o que tem que ser feito, pronto: é só fazer :)
+div.bg-dark-orange.white
+  .content.row.text-justify.padding-vertical
+    p.lead.gentium Aí quando alguém me chama pra fazer algo super específico, como programar um software, pode esquecer: o que eu vou fazer na verdade são essas 4 coisas. Pode até sair software como resultado, mas não foi isso que eu fiz.
+    p.lead.gentium Da mesma forma, quando eu inicio um projeto tão pessoal como gravar e cantar (sem saber, estudando e aprendendo no caminho) as músicas que compus para a mulher da minha vida, são estas 4 coisas o que gero pro mundo. Muito mais do que música.
