--- a/app/assets/stylesheets/standards/fonts.sass
+++ b/app/assets/stylesheets/standards/fonts.sass
@@ -1,8 +1,8 @@
 // @import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700)
 // @import url(https://fonts.googleapis.com/css?family=Abril+Fatface)
 // @import url(https://fonts.googleapis.com/css?family=Gravitas+One)
+// @import url(https://fonts.googleapis.com/css?family=Volkhov:400,400i,700,700i)
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans)
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700)
-@import url(https://fonts.googleapis.com/css?family=Volkhov:400,400i,700,700i)
-@import url(https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400i,700,700i)
+@import url(https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400i)
