Styles gentium font size

--- a/app/assets/stylesheets/standards/classes.sass
+++ b/app/assets/stylesheets/standards/classes.sass
@@ -6,6 +6,8 @@
   font-family: 'Gentium Book Basic', serif
   font-weight: 400
   font-style: italic
+  font-size: $global-font-size * 1.25
+  line-height: 1.2
 .lead
   @include breakpoint(small only)
     font-size: $global-font-size * 1.10
