Fixes punctuation mistake

--- a/app/views/leads/index.html.slim
+++ b/app/views/leads/index.html.slim
@@ -51,7 +51,7 @@ div.bg-green.white
         h4.bold.padding-vertical-small.text-left
           span.number 3
           | Eu sou um arquiteto do ecossistema
-        p.lead Eu tô sempre atento ao que se passa com o todo. Mesmo quando trabalho nas profundezas da arte mais individual, na hora de trazer essa arte pro mundo, faço isso com todo o ecossistema em mente.
+        p.lead Eu tô sempre atento ao que se passa com o todo. Mesmo quando trabalho nas profundezas da arte mais individual, na hora de trazer essa arte pro mundo faço isso com todo o ecossistema em mente.
       li
         h4.bold.padding-vertical-small.text-left
           span.number 4
