Removes the menu for now

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -60,7 +60,7 @@ html lang="pt"
         .alert-box.text-center class="#{key}" data-alert="true"
           = msg
           a href="#" class="close" &times
-    div.bg-pattern style="padding: 1rem;"
+    / div.bg-pattern style="padding: 1rem;"
       .row
         div.text-left
           span.text-left data-responsive-toggle="responsive-menu" data-hide-for="medium"
