Adds link to email

--- a/app/views/leads/index.html.slim
+++ b/app/views/leads/index.html.slim
@@ -60,4 +60,7 @@ div.bg-green.white
 div.bg-dark-orange.white
   .content.row.text-justify.padding-vertical
     p.gentium Aí quando alguém me chama pra fazer algo super específico, como programar um software, pode esquecer: o que eu vou fazer na verdade são essas 4 coisas. Pode até sair software como resultado, mas não foi isso que eu fiz.
-    p.gentium Da mesma forma, quando eu inicio um projeto tão pessoal como gravar e cantar (sem saber, estudando e aprendendo no caminho) as músicas que compus para a Laura, são estas 4 coisas o que gero pro mundo. Muito mais do que música.
+    p.gentium Da mesma forma, quando eu inicio um projeto tão pessoal como gravar e cantar as músicas que compus para a Laura (sem saber, estudando e aprendendo no caminho), são estas 4 coisas o que gero pro mundo. Muito mais do que música.
+    p.gentium Se esta é a combinação de superpoderes que tu tá procurando, me escreve!
+  .content.row.text-center.padding-bottom
+    h3= mail_to 'danielweinmann@gmail.com', 'danielweinmann@gmail.com'
