--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -49,7 +49,7 @@ $global-font-size: 110%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #F8CD3A,
+  primary: #fff,
   secondary: #777,
   success: #3adb76,
   warning: #ffae00,
