--- a/app/assets/stylesheets/standards/classes.sass
+++ b/app/assets/stylesheets/standards/classes.sass
@@ -59,6 +59,8 @@
 .padding-vertical-small
   padding-top: 1rem
   padding-bottom: 1rem
+.padding-bottom
+  padding-bottom: 2rem
 .menu-item
   font-family: 'Raleway', sans-serif
   font-weight: 700
